automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <body><!-- the body element is where everything we will see on the page will go -->
 
     <!-- our soon to be beautiful rainbow! -->
-    <div67.colors> <!-- the grandest grandparent div -->
-      <div id="orange">
-        <div id="yellow">
-          <div id="green">
-            <div id="blue">
-              <div id="indigo">
-                <div id="violet">
+    <div.colors> <!-- the grandest grandparent div -->
+      <div.colors>
+        <div.colors>
+          <div.colors>
+            <div.colors>
+              <div.colors>
+                <div.colors>
                 </div> <!-- the grandest child div -->
               </div>
             </div>
